Fixed dark mode

--- a/src/app/dataview/dataview.page.scss
+++ b/src/app/dataview/dataview.page.scss
@@ -9,15 +9,15 @@
 }
 
 .div-col-even {
-    background: var(--ion-color-primary-contrast);
+    background: var(--ion-background-color);
     padding: 15px;
 }
 
 .div-yaxis {
     padding: 15px;
-    background: var(--ion-color-primary-contrast);
+    background: var(--ion-background-color);
     position: sticky;
-    box-shadow: 1px 0 0 #000
+    box-shadow: 1px 0 0 var( --ion-color-step-950)
 }
 
 tr td:first-child {
@@ -32,10 +32,10 @@ tr td:first-child {
     position: sticky;
     top: 0;
     left: 0;
-    background-color: var(--ion-color-primary-contrast);
+    background-color: var(--ion-background-color);
     height: 100%;
     z-index: 998;
     //outline: 1px solid black;
     //box-shadow: 0 1px #000;
-    box-shadow: 0 1px #000;
+    box-shadow: 0 1px var( --ion-color-step-950);
 }
